# livestream.list.qt

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  app.livestreamlist.LivestreamListQt.yml  life.covert.livestreamList.yml  life.covert.livestreamListQt.yml  livestream-list-export-2026-01-04.json  livestream-list-qt.spec  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  flatpak.yml  release.yml  screenshots.yml
data/: app.livestreamlist.LivestreamListQt.desktop  app.livestreamlist.LivestreamListQt.metainfo.xml  life.covert.livestreamList.desktop  life.covert.livestreamList.metainfo.xml  life.covert.livestreamListQt.desktop  life.covert.livestreamListQt.metainfo.xml
docs/: youtube-cookies.md
docs/design-system/: README.md  SKILL.md  colors_and_type.css
docs/design-system/preview/: brand-iconography.html  brand-logo.html  colors-backgrounds.html  colors-light.html  colors-platform.html  colors-status.html  colors-text.html  components-add-channel.html  components-banners.html  components-buttons.html  components-chat-message.html  components-emote-picker.html  components-inputs.html  components-stream-row.html  components-tabs.html  components-theme-editor.html  spacing-radii.html  type-scale.html  type-specimens.html
installer/: livestream-list-qt.iss
scripts/: capture_screenshots.py
src/livestream_list/: __init__.py  __version__.py  main.py
src/livestream_list/api/: __init__.py  base.py  chaturbate.py  kick.py  oauth_server.py  tiktok.py  twitch.py  youtube.py
src/livestream_list/chat/: __init__.py  chat_log_store.py  manager.py  models.py  socials.py  whisper_store.py  workers.py
src/livestream_list/core/: __init__.py  autostart.py  chat.py  credential_store.py  models.py  monitor.py  platform.py  settings.py  single_instance.py  streamlink.py  theme_data.py
src/livestream_list/gui/: __init__.py  app.py  main_window.py  theme.py  (+4 more)
tests/: conftest.py  test_backoff.py  test_emote_matcher.py  test_irc_parsing.py  test_models.py  test_settings.py  test_single_instance.py  test_youtube_parsing.py
(+57 files in other folders)
