[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "livestream-list-qt"
dynamic = ["version"]
description = "Linux livestream monitoring application for Twitch, YouTube, and Kick"
readme = "README.md"
license = "GPL-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Your Name", email = "you@example.com" }
]
keywords = ["twitch", "youtube", "kick", "livestream", "monitor", "streaming"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
]

dependencies = [
    "aiohttp>=3.9.0",
    "PySide6>=6.6.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "desktop-notifier>=5.0.0",
    "keyring>=24.3.0",
    "appdirs>=1.4.4",
    "yt-dlp>=2024.0.0",  # YouTube stream detection (Unlicense)
    "pytchat>=0.5.5",  # YouTube live chat
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[project.scripts]
livestream-list-qt = "livestream_list.main:main"

[project.gui-scripts]
livestream-list-qt-gui = "livestream_list.main:main"

[project.urls]
Homepage = "https://github.com/mkeguy106/livestream-list-linux"
Repository = "https://github.com/mkeguy106/livestream-list-linux.git"

[tool.hatch.version]
path = "src/livestream_list/__version__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/livestream_list"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
